force-app/main/default/objects/Faculty_Subjects__c/Faculty_Subjects__c.object-meta.xml
<CustomObject>
    <label>Faculty Subjects</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Faculty Subjects Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faculty Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>