force-app/main/default/objects/Faculty_Subjects__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <label>Academic Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023-24</fullName>
            </value>
            <value>
                <fullName>2024-25</fullName>
            </value>
            <value>
                <fullName>2025-26</fullName>
            </value>
            <value>
                <fullName>2026-27</fullName>
            </value>
            <value>
                <fullName>2027-28</fullName>
            </value>
            <value>
                <fullName>2028-29</fullName>
            </value>
            <value>
                <fullName>2029-30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>