force-app/main/default/objects/Faculty_Subjects__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Faculty Subjects</relationshipLabel>
    <relationshipName>Faculty_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>