force-app/main/default/objects/Faculty_Subjects__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Faculty Subjects</relationshipLabel>
    <relationshipName>Faculty_Subjects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>