force-app/main/default/objects/Faculty_Subjects__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipLabel>Faculty Subjects</relationshipLabel>
    <relationshipName>Faculty_Subjects</relationshipName>
    <type>Lookup</type>
</CustomField>