force-app/main/default/objects/Faculty_Subjects__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Course__c</columns>
    <columns>Subject__c</columns>
    <columns>Total_Classes_Conducted__c</columns>
    <columns>Year__c</columns>
    <columns>Semester__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>